ENH: Solved problem of failed test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,21 +9,30 @@ download_project(PROJ                googletest
 add_subdirectory(${googletest_SOURCE_DIR} ${googletest_BINARY_DIR})
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 
-
 include_directories("/usr/local/include/bsoncxx/v_noabi")
 include_directories("/usr/local/include/mongocxx/v_noabi")
 include_directories("${gtest_SOURCE_DIR}/include"
                         "${gmock_SOURCE_DIR}/include")
 link_directories("/usr/local/lib")
 
-add_executable(mongocxx_testing main.cpp mongodbToy.cpp)
-target_compile_features(mongocxx_testing PRIVATE cxx_range_for)
-target_link_libraries(mongocxx_testing bsoncxx mongocxx)
-target_link_libraries(mongocxx_testing
+enable_testing()
+add_executable(test_module mongocxx_testing_test.cpp dbClient.h mongodbToy.h)
+
+target_compile_features(test_module PRIVATE cxx_range_for)
+
+target_link_libraries(test_module bsoncxx mongocxx)
+
+target_link_libraries(test_module
         pthread)
-target_link_libraries(mongocxx_testing
+target_link_libraries(test_module
         gmock
         gmock_main)
-target_link_libraries(mongocxx_testing
+target_link_libraries(test_module
         gtest
         gtest_main)
+
+add_test(testing test_module)
+
+set_target_properties(test_module
+      PROPERTIES
+      COMPILE_DEFINITIONS "GTEST_LINKED_AS_SHARED_LIBRARY=1")
